updated package name + test_tree.R

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,27 +13,27 @@ knitr::opts_chunk$set(
 )
 ```
 
-# epitree
+# mixtree
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/CyGei/epitree/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/CyGei/epitree/actions/workflows/R-CMD-check.yaml)
+[![R-CMD-check](https://github.com/CyGei/mixtree/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/CyGei/mixtree/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-The `epitree` package provides a statistical framework for comparing posterior distributions of transmission trees (*and soon*, phylogenetic trees) generated through Bayesian inference. It employs PERMANOVA (via [`vegan::adonis2`](https://vegandevs.github.io/vegan/reference/adonis.html)) to assess whether trees from different models or MCMC chains stem from the same underlying distribution.
+The `mixtree` package provides a statistical framework for comparing sets of trees.
 
 ## Installation
 
-You can install the development version of epitree from [GitHub](https://github.com/) with:
+You can install the development version of mixtree from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("pak")
-pak::pak("CyGei/epitree")
+pak::pak("CyGei/mixtree")
 ```
 
 # Quick start
 
 ```{r}
-library(epitree)
+library(mixtree)
 
 # Simulate two chains of transmission trees
 chainA <- lapply(1:100, function(i) {
@@ -46,7 +46,7 @@ chainB <- lapply(1:100, function(i) {
 })
 
 # Compare the two chains
-result <- compare_chains(chainA, chainB)
+result <- tree_test(chainA, chainB)
 print(result)
 
 ```
