--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,9 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
-  out.width = "100%"
+  out.width = "100%",
+  message = FALSE,
+  warning = FALSE
 )
 ```
 
@@ -32,7 +34,7 @@ pak::pak("CyGei/mixtree")
 
 # Quick start
 
-```{r}
+```{r, message = FALSE}
 library(mixtree)
 
 # Simulate two chains of transmission trees
